basic code execution logic

--- a/css/breaks.css
+++ b/css/breaks.css
@@ -45,3 +45,19 @@
 .vb-6 {
     width: 1.5rem;
 }
+
+.hb-7 {
+    height: 2rem;
+}
+
+.vb-7 {
+    width: 2rem;
+}
+
+.hb-8 {
+    height: 3rem;
+}
+
+.vb-8 {
+    width: 3rem;
+}
