--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -11,6 +11,7 @@
     width: 250px;
     height: 100vh;
     padding-top: var(--navbar-height);
+    padding-bottom: 8px;
     position: fixed;
     top: 0;
     left: 0;
