--- a/css/helpers.css
+++ b/css/helpers.css
@@ -2,6 +2,10 @@
     display: none !important;
 }
 
+.invisible {
+    visibility: hidden;
+}
+
 *, ::after, ::before {
     box-sizing: border-box;
     vertical-align: bottom;
