--- a/css/site.css
+++ b/css/site.css
@@ -4,11 +4,22 @@ html {
     font-family: Arial;
     line-height: 1.5;
     word-break: break-word;
+    overflow: hidden;
 }
 
 body {
     height: 100vh;
     margin: 0;
+}
+
+.navBarBreak {
+    height: var(--navbar-height);
+}
+
+#scrollingElement {
+    height: calc(100vh - var(--navbar-height));
+    width: 100vw;
+    overflow-y: auto;
 }
 
 .navbar {
@@ -27,7 +38,6 @@ body {
     max-width: 720px;
     padding-right: var(--bs-gutter-x,.75rem);
     padding-left: var(--bs-gutter-x,.75rem);
-    padding-top: var(--navbar-height);
     padding-bottom: 64px;
     margin-right: auto;
     margin-left: auto;
