--- a/css/dialog.css
+++ b/css/dialog.css
@@ -20,3 +20,10 @@
     opacity: 1;
     transition: all .5s ease-in-out;
 }
+
+.dialogInnerContent {
+    max-height: 90vh;
+    overflow-y: auto;
+    max-width: min(90vw, 800px);
+    min-width: min(90vw, 400px);
+}
