--- a/css/images.css
+++ b/css/images.css
@@ -1,3 +1,11 @@
 img {
     max-width: 100%;
+    border-radius: 10px;
+}
+
+figcaption {
+    color: var(--raised-text-color);
+    font-style: italic;
+    font-size: 0.8rem;
+    margin-left: 8px;
 }
