--- a/css/site.css
+++ b/css/site.css
@@ -48,3 +48,7 @@ body {
         padding-left: calc(var(--bs-gutter-x, 0.75rem) + calc(calc(100vw - 100%) / 2));
     }
 }
+
+p {
+    margin: 0;
+}
