markdown input, chatbot, markdown bars, decoration elements

--- a/css/borders.css
+++ b/css/borders.css
@@ -13,5 +13,11 @@
 }
 
 hr {
-    border-color: var(--border-color);
+    border: 0;
+    border-bottom: 1px solid var(--raised-text-color);
+}
+
+.vr {
+    height: 100%;
+    border-right: 1px solid var(--raised-text-color);
 }
