--- a/css/colorSchemes.css
+++ b/css/colorSchemes.css
@@ -45,6 +45,8 @@
     --codeblock-color: var(--text-color);
     --codeblock-background-color: var(--lowered-background-color);
     --inline-code-background-color: #444;
+    --progress-background-color: var(--raised-background-color);
+    --progress-foreground-color: var(--text-color);
 }
 
 /* The variabels should work with multiple levels of abstractions. */
@@ -88,6 +90,8 @@
     --codeblock-background-color: var(--lowered-background-color);
     --codeblock-color: var(--text-color);
     --inline-code-background-color: #ccc;
+    --progress-background-color: var(--raised-background-color);
+    --progress-foreground-color: var(--text-color);
 }
 
 [color-scheme="dark"] .lightModeOnly, .dark .lightModeOnly {
