--- a/css/markdown.css
+++ b/css/markdown.css
@@ -6,3 +6,20 @@
 .markdown table {
     margin-bottom: 16px;
 }
+
+.markdownTopBar, .markdownBottomBar {
+    background-color: var(--code-bar-background-color);
+    color: var(--codeblock-color);
+}
+
+.markdownTopBar {
+    border-radius: 8px 8px 0 0;
+}
+
+.markdownBottomBar {
+    border-radius: 0 0 8px 8px;
+}
+
+.markdownPreview {
+    padding: 10px 16px;
+}
