--- a/css/input.css
+++ b/css/input.css
@@ -15,3 +15,52 @@ input {
     font-style: italic;
     font-size: 0.8rem;
 }
+
+input[type="number"] {
+    width: 100px;
+    padding: 6px 16px;
+}
+
+input[type="password"] {
+    width: 200px;
+    padding: 6px 16px;
+    line-height: 1;
+}
+
+input[type=checkbox], input[type=checkbox]:checked {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    -o-appearance: none;
+}
+
+input[type=checkbox] {
+    position: relative;
+    background-color: var(--background-color);
+    border-radius: 5px;
+    height: 16px;
+    width: 16px;
+    cursor: pointer;
+    margin: 0;
+    line-height: 1;
+}
+
+input[type=checkbox]:hover {
+    background-color: var(--raised-background-color);
+}
+
+input[type=checkbox]:checked {
+    background-color: var(--text-color);
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+input[type=checkbox]:checked::after {
+    content: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" height="17px" viewBox="0 -960 960 960" fill="var(--background-color)"><path d="m382-393 321-321q20.09-20 48.55-20Q780-734 800-714.21q20 19.79 20 48.5T800-617L430-248q-19.82 20-47.91 20Q354-228 334-248L161-420q-20-20.73-20-48.87Q141-497 160.79-517q20.79-21 49-21T258-517l124 124Z"/></svg>');
+    display: block;
+    position: absolute;
+    left: -1.0px;
+    top: -1.1px;
+}
+
+.checkboxContainer {
+    line-height: 1;
+}
