--- a/css/lists.css
+++ b/css/lists.css
@@ -47,3 +47,26 @@
     flex-basis: max-content;
 }
 
+.decoratedContainer {
+    display: flex;
+}
+
+.decoratedContainer > *:first-child,
+.decoratedContainer > *:last-child {
+    width: 28px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.decoratedContainer > *:first-child {
+    align-items: start;
+}
+
+.decoratedContainer > *:last-child {
+    align-items: end;
+}
+
+.decoratedContainer > *:nth-child(2) {
+    flex-grow: 1;
+}
