--- a/css/select.css
+++ b/css/select.css
@@ -2,7 +2,7 @@
 select {
     padding: 8px 12px;
     color: var(--text-color);
-    background-color: var(--raised-background-color);
+    background-color: var(--background-color);
     border: 1px solid var(--border-color);
     border-radius: 10px;
 }
