--- a/css/contentEditable.css
+++ b/css/contentEditable.css
@@ -22,6 +22,10 @@
     padding: 10px 32px 0 32px;
 }
 
+.contenteditableContainerContent {
+    padding: 0 32px 0 32px;
+}
+
 .contenteditableContainerFooter {
     padding: 0 32px 10px 32px;
 }
