--- a/css/breaks.css
+++ b/css/breaks.css
@@ -2,62 +2,96 @@
     height: 0.25rem;
 }
 
-.vb-1 {
-    width: 0.25rem;
-}
-
 .hb-2 {
     height: 0.5rem;
-}
-
-.vb-2 {
-    width: 0.5rem;
 }
 
 .hb-3 {
     height: 0.75rem;
 }
 
-.vb-3 {
-    width: 0.75rem;
-}
-
 .hb-4 {
     height: 1rem;
-}
-
-.vb-4 {
-    width: 1rem;
 }
 
 .hb-5 {
     height: 1.25rem;
 }
 
-.vb-5 {
-    width: 1.25rem;
-}
-
 .hb-6 {
     height: 1.5rem;
-}
-
-.vb-6 {
-    width: 1.5rem;
 }
 
 .hb-7 {
     height: 2rem;
 }
 
-.vb-7 {
-    width: 2rem;
-}
-
 .hb-8 {
     height: 3rem;
 }
 
+
+.vb-1 {
+    width: 0.25rem;
+}
+
+.vb-2 {
+    width: 0.5rem;
+}
+
+.vb-3 {
+    width: 0.75rem;
+}
+
+.vb-4 {
+    width: 1rem;
+}
+
+.vb-5 {
+    width: 1.25rem;
+}
+
+.vb-6 {
+    width: 1.5rem;
+}
+
+.vb-7 {
+    width: 2rem;
+}
+
 .vb-8 {
     width: 3rem;
+}
+
+
+.gap-1 {
+    gap: 0.25rem;
+}
+
+.gap-2 {
+    gap: 0.5rem;
+}
+
+.gap-3 {
+    gap: 0.75rem;
+}
+
+.gap-4 {
+    gap: 1rem;
+}
+
+.gap-5 {
+    gap: 1.25rem;
+}
+
+.gap-6 {
+    gap: 1.5rem;
+}
+
+.gap-7 {
+    gap: 2rem;
+}
+
+.gap-8 {
+    gap: 3rem;
 }
