--- a/css/progress.css
+++ b/css/progress.css
@@ -14,7 +14,7 @@ progress::-webkit-progress-bar {
 progress::-webkit-progress-value {
     border: 0;
     height: 10px;
-    border-radius: 5px 0 0 5px;
+    border-radius: 5px;
     background-color: var(--progress-foreground-color);
 }
 progress::-moz-progress-bar {
