added storage, extern, linked, load, highlight
also overhauled home and improved iframe messaging. also fixes.

--- a/css/colorSchemes.css
+++ b/css/colorSchemes.css
@@ -17,6 +17,7 @@
     --raised-text-color: #BBB;
     --stress-color: #78bfc1;
     --placeholder-color: #666;
+    --mark-color: #007892;
     /* Background Colors */
     --background-color: #222;
     --raised-background-color: #333;
@@ -62,6 +63,7 @@
     --raised-text-color: #333;
     --stress-color: #30765a;
     --placeholder-color: #999;
+    --mark-color: #73d2e6;
     /* Background Colors */
     --background-color: #EEE;
     --raised-background-color: #E7E7E7;
