--- a/css/buttons.css
+++ b/css/buttons.css
@@ -7,9 +7,12 @@ button, .fakeButton {
     padding: 0;
     font-size: 1rem;
     user-select: none;
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE10+/Edge */
+    -webkit-user-select: none;
+    /* Safari */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* IE10+/Edge */
 }
 
 .complexButton {
@@ -21,6 +24,6 @@ button, .fakeButton {
     background: var(--raised-background-color);
 }
 
-.complexButton:hover:not(:disabled) {
+.complexButton:hover:not(:disabled), .complexButton:hover:not([disabled]) {
     background: var(--hover-background-color);
 }
