--- a/css/code.css
+++ b/css/code.css
@@ -15,6 +15,11 @@ p code {
     border-radius: 8px 8px 0 0;
 }
 
+.codeBlock {
+    background-color: var(--codeblock-background-color);
+    color: var(--codeblock-color);
+}
+
 pre {
     padding: 0;
     margin: 0;
