--- a/css/lists.css
+++ b/css/lists.css
@@ -52,22 +52,22 @@
     display: flex;
 }
 
-.decoratedContainer > *:first-child,
-.decoratedContainer > *:last-child {
+.decoratedContainer>*:first-child,
+.decoratedContainer>*:last-child {
     width: 28px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.decoratedContainer > *:first-child {
+.decoratedContainer>*:first-child {
     align-items: start;
 }
 
-.decoratedContainer > *:last-child {
+.decoratedContainer>*:last-child {
     align-items: end;
 }
 
-.decoratedContainer > *:nth-child(2) {
-    flex-grow: 1;
+.decoratedContainer>*:nth-child(2) {
+    width: calc(100% - 28 * 2px);
 }
